force-app/main/default/objects/SDO_Contract_Service__c/SDO_Contract_Service__c.object-meta.xml
<CustomObject>
    <label>Attached Services</label>
    <nameField>
        <displayFormat>SCS-{0000000}</displayFormat>
        <label>SDO Contract Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Contract Service</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>