force-app/main/default/objects/SDO_Contract_Service__c/fields/Associated_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Associated_Accounts__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Accounts</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account_Relationship__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Provider to Service Delivery Organisation</value>
        </filterItems>
        <filterItems>
            <field>Account_Relationship__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Provider to Management Company</value>
        </filterItems>
        <filterItems>
            <field>Account_Relationship__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Provider to Administrative Organisation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Relationship__c</referenceTo>
    <relationshipLabel>Attached Services</relationshipLabel>
    <relationshipName>Attached_Services</relationshipName>
    <type>Lookup</type>
</CustomField>