force-app/main/default/objects/SDO_Contract_Service__c/fields/GPMS_SDO_Name__c.field-meta.xml
<CustomField>
    <fullName>GPMS_SDO_Name__c</fullName>
    <description>Store the SDO account name</description>
    <formula>Associated_Accounts__r.Account_To_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDO Name</label>
    <type>Text</type>
</CustomField>