force-app/main/default/objects/SDO_Contract_Service__c/fields/Report_Filter_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_Filter_ID__c</fullName>
    <formula>CASESAFEID(Service__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Filter ID</label>
    <type>Text</type>
</CustomField>