force-app/main/default/objects/SDO_Contract_Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>SDO Contract Service</relationshipLabel>
    <relationshipName>SDO_Contract_Service</relationshipName>
    <type>Lookup</type>
</CustomField>