force-app/main/default/objects/SDO_Contract_Service__c/fields/Service_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_End_Date__c</fullName>
    <label>Service Contract End Date</label>
    <type>Date</type>
</CustomField>