force-app/main/default/objects/SDO_Contract_Service__c/fields/Service_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Start_Date__c</fullName>
    <label>Service Contract Start Date</label>
    <type>Date</type>
</CustomField>