force-app/main/default/objects/SDO_Contract_Service__c/recordTypes/Administration_Organisation_to_Service.recordType-meta.xml
<RecordType>
    <fullName>Administration_Organisation_to_Service</fullName>
    <active>true</active>
    <label>Administration Organisation to Service</label>
</RecordType>