force-app/main/default/objects/SDO_Contract_Service__c/recordTypes/Management_Company_to_Service.recordType-meta.xml
<RecordType>
    <fullName>Management_Company_to_Service</fullName>
    <active>true</active>
    <label>Management Company to Service</label>
</RecordType>