force-app/main/default/objects/SDO_Contract_Service__c/recordTypes/SDO_Contract_to_Service.recordType-meta.xml
<RecordType>
    <fullName>SDO_Contract_to_Service</fullName>
    <active>true</active>
    <label>SDO Contract to Service</label>
</RecordType>