force-app/main/default/objects/SDO_Contract_Service__c/validationRules/SCS_02_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>SCS_02_StartDate</fullName>
    <active>true</active>
    <description>Start date must be populated wen creating an SCS record</description>
    <errorConditionFormula>OR(AND(RecordType.Name =&apos;SDO Contract to Service&apos;,	
				ISBLANK(Service_Contract_Start_Date__c)),
				AND(RecordType.Name =&apos;Management Company to Service&apos;,	
				ISBLANK(Association_Start_Date__c)))</errorConditionFormula>
    <errorMessage>Must have a start date</errorMessage>
</ValidationRule>