force-app/main/default/objects/SDO_Contract_Service__c/validationRules/SCS_03_AssociationStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>SCS_03_AssociationStartDate</fullName>
    <active>true</active>
    <description>Start date must be populated wen creating an SCS record</description>
    <errorConditionFormula>AND(RecordType.Name = &apos;Management Company to Service&apos;,	
				ISBLANK(Association_Start_Date__c))</errorConditionFormula>
    <errorDisplayField>Association_Start_Date__c</errorDisplayField>
    <errorMessage>Must have a start date</errorMessage>
</ValidationRule>