force-app/main/default/objects/SDO_Contract_Service__c/validationRules/SCS_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SCS_Reason_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Association_End_Date__c )),ISBLANK( Reason__c ))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason is mandatory when Association is End Dated.</errorMessage>
</ValidationRule>