force-app/main/default/objects/SDO_Contract_Service__c/validationRules/SCS_ServiceCombineLock.validationRule-meta.xml
<ValidationRule>
    <fullName>SCS_ServiceCombineLock</fullName>
    <active>true</active>
    <description>This is used to lock the record during the service combine process.</description>
    <errorConditionFormula>Service__r.GPMS_CombineLock__c</errorConditionFormula>
    <errorMessage>This service is being combined. Related records cannot be changed.</errorMessage>
</ValidationRule>